--- a/index.html
+++ b/index.html
@@ -8,10 +8,98 @@
     <title>Expedition Daily</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/389e61deb2.js" crossorigin="anonymous"></script>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 
 <body>
+    <!-- Header -->
+    <header class="container">
+        <!-- First Navbar -->
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand text-info fw-semibold fs-4" href="#">Expedition Daily</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link text-info fw-semibold fs-5" aria-current="page" href="#">News</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-info fw-semibold fs-5" href="#">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><img class="rounded-circle" src="images/profile.jpg"
+                                    alt="Image of profile" height="40px" width="40px"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <hr>
+        <!-- Second Navbar -->
+        <nav class="navbar navbar-expand-lg">
+            <ul class="navbar-nav m-auto mb-2 mb-lg-0 container-fluid">
+                <li class="nav-item">
+                    <a class="nav-link text-secondary text-semibold" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-secondary text-semibold" href="#">Breaking News</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-secondary text-semibold" href="#">Regular News</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-secondary text-semibold" href="#">International News</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-secondary text-semibold" href="#">Sports</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-secondary text-semibold" href="#">Entertainment</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-secondary text-semibold" href="#">Culture</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-secondary text-semibold" href="#">Arts</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-secondary text-semibold" href="#">All News</a>
+                </li>
+            </ul>
+        </nav>
+        <!-- Item Found -->
+        <div class="p-2 rounded bg-light text-info text-semibold fs-5 mt-4">4 Items Found For Category Entertainment
+        </div>
+        <!-- Sort Section -->
+        <section class="d-flex flex-column flex-sm-column flex-md-row mt-5">
+            <div class="d-flex align-items-center">
+                <label for="form-select" class="me-2 fs-6 text-secondary text-nowrap">Sort By View:</label>
+                <select id="form-select" class="form-select text-secondary" aria-label="Default select example">
+                    <option selected>Default</option>
+                    <option value="1">Name</option>
+                    <option value="2">Time</option>
+                    <option value="3">Popularity</option>
+                </select>
+            </div>
+            <div class="ms-auto mt-4 mt-sm-4 mt-md-0">
+                <button type="button" class="btn btn-info text-white fw-semibold me-2">Today's Pick</button>
+                <button type="button" class="btn border border-info text-info fw-semibold">Trending</button>
+            </div>
+        </section>
+    </header>
 
+    <!-- Bootstrap Javascript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
