--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
 
     </main>
 
+    <!-- Footer -->
+    <footer class="bg-white py-5">
+        <p class="fs-4 fw-bold text-secondary text-center">Copyright 2022 Expedition Daily</p>
+    </footer>
+
     <!-- Bootstrap Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
