--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <a class="nav-link text-info fw-semibold fs-5" aria-current="page" href="#">News</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-info fw-semibold fs-5" href="#">Blog</a>
+                            <a class="nav-link text-info fw-semibold fs-5" href="blog.html">Blog</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#"><img class="rounded-circle" src="images/profile.jpg"
