--- a/index.html
+++ b/index.html
@@ -46,50 +46,10 @@
         <!-- Second Navbar -->
         <nav class="navbar navbar-expand-lg">
             <ul class="navbar-nav m-auto mb-2 mb-lg-0 container-fluid" id="news">
-                <li class="nav-item">
-                    <a class="nav-link text-secondary text-semibold remove-class" aria-current="page"
-                        href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-secondary text-semibold remove-class" href="#"
-                        onclick="loadCategory('01')">Breaking
-                        News</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-secondary text-semibold remove-class" href="#"
-                        onclick="loadCategory('02')">Regular
-                        News</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-secondary text-semibold remove-class" href="#"
-                        onclick="loadCategory('03')">International
-                        News</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-secondary text-semibold remove-class" href="#"
-                        onclick="loadCategory('04')">Sports</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-secondary text-semibold remove-class" href="#"
-                        onclick="loadCategory('05')">Entertainment</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-secondary text-semibold remove-class" href="#"
-                        onclick="loadCategory('06')">Culture</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-secondary text-semibold remove-class" href="#"
-                        onclick="loadCategory('07')">Arts</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-secondary text-semibold remove-class" href="#"
-                        onclick="loadCategory('08')">All News</a>
-                </li>
             </ul>
         </nav>
         <!-- Item Found -->
-        <div class="p-2 rounded bg-light text-info fw-semibold fs-5 mt-4" id="found-news">0 News Found For Category
-            Entertainment
+        <div class="p-2 rounded bg-light text-info fw-semibold fs-5 mt-4" id="found-news">0 News Found For This Category
         </div>
         <!-- Sort Section -->
         <section class="d-flex flex-column flex-sm-column flex-md-row mt-5">
