--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
             </ul>
         </nav>
         <!-- Item Found -->
-        <div class="p-2 rounded bg-light text-info fw-semibold fs-5 mt-4" id="found-news">0 News Found For This Category
-        </div>
+        <div class="p-2 rounded bg-light text-info fw-semibold fs-5 mt-4" id="found-news"></div>
         <!-- Sort Section -->
         <section class="d-flex flex-column flex-sm-column flex-md-row mt-5">
             <div class="d-flex align-items-center">
