--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <a class="nav-link text-info fw-semibold fs-5" aria-current="page" href="#">News</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-info fw-semibold fs-5" href="blog.html">Blog</a>
+                            <a class="nav-link text-info fw-semibold fs-5" href="#" onclick="showBlog()">Blog</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#"><img class="rounded-circle" src="images/profile.jpg"
@@ -91,6 +91,7 @@
         crossorigin="anonymous"></script>
     <!-- Javascript -->
     <script src="js/script.js"></script>
+    <script src="js/blog.js"></script>
 </body>
 
 </html>
